[metadata]
name = random_information_generator
version = 1.0
author = 
    "TheArchitect#8198"
    ona li toki e jan Epiphany tawa mi
description = This tool is made to generate Randomized information. All addresses generated ARE REAL they are all grabbed off 'https://openaddresses.io'
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = random information generator, random_information_generator, random, generator, openaddress, radomprofile, color, terminal, colorama, password
license = N/A
platforms = Any
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
home_page = https://github.com/FatherVonTayvious/Random-Information-Generator
download_url = https://github.com/FatherVonTayvious/Random-Information-Generator/releases

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    randominformationgenerator = Info:main