################################################################################
# This file is part of Random-Information-Generator.                           #
#                                                                              #
# Random-Information-Generator is free software: you can redistribute it       #
# and/or modify it under the terms of the GNU General Public License as        #
# published by the Free Software Foundation, either version 3 of the License,  #
# or (at your option) any later version.                                       #
#                                                                              #
# Random-Information-Generator is distributed in the hope that it will be      #
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General     #
# Public License for more details.                                             #
#                                                                              #
# You should have received a copy of the GNU General Public License along with #
# Random-Information-Generator. If not, see <https://www.gnu.org/licenses/>.   #
################################################################################

[metadata]
name = random_information_generator
version = 1.1
author = TheArchitect#8198
maintainer = ona li toki e jan Epiphany tawa mi
description = This tool is made to generate Randomized information. All addresses generated ARE REAL they are all grabbed off 'https://openaddresses.io'
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = random information generator, random_information_generator, random, generator, openaddresses, random-profile, color, terminal, colorama, password
license = GPL-3.0-or-later
platforms = Any
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
home_page = https://github.com/FatherVonTayvious/Random-Information-Generator
download_url = https://github.com/FatherVonTayvious/Random-Information-Generator/releases

[options]
package_dir=
    =src
packages=find:
install_requires =
    colorama
    random-address
    random-profile

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    randominformationgenerator = random_information_generator.Info:main